# SnakeRobotSerpenoid

./: README.md
SnakeRobotArduino/: cal_amplitude.h  cal_optimize.h  cal_phase.h  cal_position.h  servo_run.h  snake_joint.h  snake_robot.h  snake_robot_arduino.ino
SnakeRobotRaspberryPiCPP/: CMakeLists.txt  snake_body.h  snake_fun_xy.h  snake_init.h  snake_joint.h  snake_main.cpp  snake_motion_1.h  snake_motion_2.h  snake_motion_3.h  snake_motion_4.h  snake_servo_run.h
SnakeRobotRaspberryPiPython/: snake_body.py  snake_fun_xy.py  snake_init.py  snake_joint.py  snake_main.py  snake_motion.py  snake_servo_read.py  snake_servo_run.py
